--- a/src/components/project-card/ProjectCard.module.css
+++ b/src/components/project-card/ProjectCard.module.css
@@ -144,4 +144,8 @@
 
 		border: 1px solid black;
 	}
+
+	.sizeFilterContainer {
+		margin-top: 1em;
+	}
 }
